# soft_dev_methods-lab02

./: .clang-format  .clang-tidy  .codeclimate.yml  CMakeLists.txt  Makefile  README.md
src/: game.cpp  main.cpp
src/games/: common_game.cpp  common_game.hpp  engine.cpp  engine.hpp  geom_prog_game.cpp  geom_prog_game.hpp  lcm_game.cpp  lcm_game.hpp
